# bluewidget

./: .gitignore  Cargo.toml  README.md
src/: bluetooth.rs  config.rs  main.rs
src/ui/: device_row.rs  mod.rs  window.rs
