[package]
name = "bluetooth-widget"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
bluer = { version = "0.17", features = ["bluetoothd"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
anyhow = "1.0"
futures = "0.3"
glib = "0.20"